--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,8 @@
 		"vscode": {
 			"extensions": [
 				"GitHub.copilot",
-				"ms-python.python"
+				"ms-python.python",
+				"mechatroner.rainbow-csv"
 			]
 		}
 	}
